fix table margins - remove redundancy in margin handling, bug 83786 r=karnaze sr=attinasi a=dbaron